keys are now automatically created on wallet creation
Signed-off-by: Dominik Pinsel <dominik.pinsel@mercedes-benz.com>